# Agentic_rag

./: .gitignore  README.md  api.py  config.yaml  pyproject.toml  requirements.txt
frontend/: app.py  requirements.txt
frontend/pages/: 📊_Evaluation.py
indexing/: file_hashes.json
indexing/scratch_images/: 2602.03442v1_rag_pdf-1-9.md
src/: __init__.py  config.py  embeddings.py  indexer.py  langgraph_adapter.py  llm.py  vectorstore.py
src/agents/: __init__.py  decision_agent.py  domain_agent.py  generator_agent.py  grader_agent.py  prompt_manager.py  reflection_agent.py  router_agent.py
src/cache/: semantic_cache.py
src/evaluation/: __init__.py  batch_evaluator.py  evaluator.py  grok_model.py  history.py  rag_metrics.py
src/graph/: __init__.py  state.py  workflow.py
src/indexing/: __init__.py  chunker.py  image_enricher.py  pdf_parser.py  pipeline.py
src/retrieval/: __init__.py  bm25_retriever.py  hybrid.py  sql_agent.py  vector_retriever.py
src/utils/: __init__.py  custom_exception.py  logger.py
